--- a/new_settings.json
+++ b/new_settings.json
@@ -22,6 +22,29 @@
                 "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_103.rutu",
                 "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_104.rutu"
             ]
+        },
+        {
+            "country_imageUrl": "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_images/BANG.jpg",
+            "country_name": "BANGED",
+            "Links": "https://iptvfree-adultos001.blogspot.com",
+            "SubLinks": [
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_105.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_106.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_107.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_108.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_109.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_11.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_110.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_111.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_112.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_113.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_114.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_115.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_116.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_117.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_118.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_119.rutu"
+            ]
         }
     ]
 }
