--- a/new_settings.json
+++ b/new_settings.json
@@ -1,26 +1,26 @@
 {
     "records": [
         {
-            "country_imageUrl": "https://play-lh.googleusercontent.com/1sCuEZ-T8PZ-IkG8w_J8fZfB6v0AfiPosRjW0B8DrXV__tLD6XwDTlfRNqFSVm8EFbk=w240-h480-rw",
-            "country_name": "BUTTRESS",
+            "country_imageUrl": "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_images/BANG.jpg",
+            "country_name": "BANGED",
             "Links": "https://iptvfree-adultos001.blogspot.com",
             "SubLinks": [
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_22.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_23.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_24.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_2_1.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_2_2.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_2_3.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_2_4.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_3.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_1.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_10.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_100.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_101.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_102.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_103.rutu",
-                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_104.rutu"
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_105.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_106.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_107.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_108.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_109.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_11.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_110.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_111.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_112.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_113.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_114.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_115.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_116.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_117.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_118.rutu",
+                "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_files/git_4_119.rutu"
             ]
         },
         {
