--- a/new_settings.json
+++ b/new_settings.json
@@ -24,8 +24,8 @@
             ]
         },
         {
-            "country_imageUrl": "https://gitlab.com/bitcodingsolutions/iptv_channels/-/raw/main/X_App/More_Urls/data_images/BANG.jpg",
-            "country_name": "BANGED",
+            "country_imageUrl": "https://im.indiatimes.in/content/2022/Dec/Untitled-design---2022-12-04T143743263_638c636e92f6e.png?w=1200&h=900&cc=1",
+            "country_name": "EE... RAJU..",
             "Links": "https://iptvfree-adultos001.blogspot.com",
             "SubLinks": [
                 "https://raw.githubusercontent.com/vkbitcoding10/IPTV_project/main/git_1.rutu",
