--- a/new_settings.json
+++ b/new_settings.json
@@ -24,8 +24,8 @@
             ]
         },
         {
-            "country_imageUrl": "https://im.indiatimes.in/content/2022/Dec/Untitled-design---2022-12-04T143743263_638c636e92f6e.png?w=1200&h=900&cc=1",
-            "country_name": "EE... RAJU..",
+            "country_imageUrl": "https://hindi.cdn.zeenews.com/hindi/sites/default/files/2021/06/15/847578-sunny-leone.jpg?im=FitAndFill=(1200,900)",
+            "country_name": "BANGED",
             "Links": "https://iptvfree-adultos001.blogspot.com",
             "SubLinks": [
                 "https://raw.githubusercontent.com/vkbitcoding10/IPTV_project/main/git_1.rutu",
